# multitask-bot

./: .env.sample  README.md  pyproject.toml  setup.cfg
tgbot/: bot.py  config.py
tgbot/cute_animals/: api.py  handlers.py
tgbot/exchange_rates/: api.py  handlers.py  states.py
tgbot/polls/: handlers.py  states.py
tgbot/services/: keyboards.py  setting_commands.py
tgbot/user/: handlers.py
tgbot/weather/: api.py  city_case.py  declension.py  handlers.py  states.py
weather/: handlers.py
